# Weekly-Report-Algoritma-24343038-Ittihadi-Ramadhan

./: .gitignore  CMakeLists.txt  README.md
Modul 01 Pengantar Algoritma dan Pemrograman/: README.md
Modul 02 Pemrograman Dasar C/: README.md  jobsheet2_3.c  jobsheet2_4.c
Modul 03 Variabel Konstanta dan Tipe Data/: README.md  jobsheet3_2.c
Modul 04 Operator/: README.md  jobsheet4_4.c
Modul 05 Flow Control Decision Making/: README.md  jobsheet5_3.c
Modul 06 Flow Control Looping/: README.md  jobsheet6_2.c  jobsheet6_4.c
Modul 07 Array/: README.md  jobsheet7_2.c  jobsheet7_3.c
Modul 08 Fungsi dan Prosedur/: README.md  jobsheet8_1.c  jobsheet8_2.c  jobsheet8_3.c  jobsheet8_4.c
Modul 09 Pointer/: README.md
Modul 1 Pengantar Algoritma dan Pemrograman/: README.md
Modul 10 Enumerasi dan Struktur/: README.md  jobsheet10_1.c  jobsheet10_2.c  jobsheet10_3.c
Modul 11 File Handling in C/: README.md  jobsheet11_1.c
Modul 2 Pemrograman Dasar C/: README.md  jobsheet2_1.c  jobsheet2_2.c
Modul 3 Variabel Konstanta dan Tipe Data/: README.md  jobsheet3_1.c  jobsheet3_3.c
Modul 4 Operator/: README.md  jobsheet4_1.c  jobsheet4_2.c  jobsheet4_3.c
Modul 5 Flow Control Decision Making/: README.md  jobsheet5_1.c  jobsheet5_2.c  jobsheet5_4.c
Modul 6 Flow Control Looping/: README.md  jobsheet6_1.c  jobsheet6_3.c
Modul 7 Array/: README.md  jobsheet7_1.c  jobsheet7_3.c
Modul 8 Fungsi dan Prosedur/: README.md
Modul 9 Pointer/: README.md  jobsheet9_1.c  jobsheet9_2.c  jobsheet9_3.c
